Tweak slide style
Set the slide style according to your preference. I use the following setup:

- font: Sans Serif Bold font at 1.72 times the default bodysize (the `c` at the
  end of `\ssbfc`)
- color: darkred
- alignment: middle aligned slide title. By default, the middle
  alignment tries to match the middle alignment for sections, which
  creates a spurious vertical space. Add `hidenumber=yes` to get rid of
  that.

Read:

- http://wiki.contextgarden.net/Titles
- http://wiki.contextgarden.net/Command/setupheads

for details on how to configure section heads.

--- a/slides.tex
+++ b/slides.tex
@@ -37,6 +37,14 @@
     ]
 
 
-\definehead[slide][subject]  
+\definehead
+    [slide]
+    [subject]  
+    [
+      style=\ssbfc,
+      color=darkred,
+      alternative=middle,
+      hidenumber=yes,
+    ]
 
 \stopenvironment
