Add page numbers to footer
I use a simple pagenumber in footers. See

- http://wiki.contextgarden.net/Headers_and_Footers

for details.

--- a/slides.tex
+++ b/slides.tex
@@ -37,6 +37,9 @@
     ]
 
 
+\setupfooter[style=small,color=darkblue]
+\setupfootertexts[][\userpagenumber/\lastuserpage]
+
 \definehead
     [slide]
     [subject]  
