Change background color
I remember reading somewhere that white is not a good color for slides. So, I
change the background color to lightgray. See

- http://wiki.contextgarden.net/Command/setupbackgrounds

for more details.

--- a/slides.tex
+++ b/slides.tex
@@ -37,6 +37,8 @@
     ]
 
 
+\setupbackgrounds[page][background=color, backgroundcolor=lightgray]
+
 \setupfooter[style=small,color=darkblue]
 \setupfootertexts[][\userpagenumber/\lastuserpage]
 
