Use metapost to create a item marker
I like to use filled square as the top-level item marker. Rather than using math
symbols for the item marker, I use Metapost to draw the square.

For more details on using MetaPost, read:

- http://wiki.contextgarden.net/MetaPost_in_ConTeXt
- http://www.pragma-ade.com/general/manuals/metafun-s.pdf

For details on symbols, read:

- http://wiki.contextgarden.net/Symbols

--- a/slides.tex
+++ b/slides.tex
@@ -60,6 +60,15 @@
       headcolor=darkred,
     ]
 
+\startuseMPgraphic{itemize:main}
+  save p; path p;
+  p := fullsquare scaled 1.5ExHeight;
+  fill p withcolor \MPcolor{darkred};
+\stopuseMPgraphic
+
+\definesymbol[itemize:main][\useMPgraphic{itemize:main}]
+
+\setupitemize[1][symbol=itemize:main]
 
 
 \stopenvironment
