Set spacing for itemize
Tweak the spacing around bullet according to your preference.

--- a/slides.tex
+++ b/slides.tex
@@ -58,6 +58,8 @@
     [
       headstyle=\ssa,
       headcolor=darkred,
+      afterhead={\blank[none]},
+      inbetween={\blank[2*big]},
     ]
 
 \startuseMPgraphic{itemize:main}
