Tight itemized list for level 2
By default, lists in ConTeXt are `unpacked`. I prefer to use second level lists
without any additional spacing around the items; hence the `nowhite` option.

This setup is not perfect because of the extra space before the 2nd level
items. This will be fixed in the next commit

--- a/slides.tex
+++ b/slides.tex
@@ -71,6 +71,7 @@
 \definesymbol[itemize:main][\useMPgraphic{itemize:main}]
 
 \setupitemize[1][symbol=itemize:main]
+\setupitemize[2][nowhite]
 
 
 \stopenvironment
