Remove unwanted spacing before 2nd level list
ConTeXt provides different alternatives for determining the spacing around
itemized lists, but there is no high level interface around these alternatives.

With the default alternative, I could not set the spacing around itemized lists
according to my liking; so I change an internal macro to choose a different
alternative for determining spacing around itemize lists.

There might be a better, higher-level way to get the same visual output, but I
am not aware of it.

--- a/slides.tex
+++ b/slides.tex
@@ -73,5 +73,8 @@
 \setupitemize[1][symbol=itemize:main]
 \setupitemize[2][nowhite]
 
+\unprotect
+\c_strc_itemgroups_spacing_mode\plusone
+\protect
 
 \stopenvironment
