Add metadata to footer
Again, this is a matter of personal choice. I like to include the presentation
title and the author in the footer of each slide. Read:

- http://wiki.contextgarden.net/Headers_and_Footers

for details on setting the footer and

- http://wiki.contextgarden.net/Inside_ConTeXt#Using_variables

for information on variables.

--- a/slides.tex
+++ b/slides.tex
@@ -40,7 +40,11 @@
 \setupbackgrounds[page][background=color, backgroundcolor=lightgray]
 
 \setupfooter[style=small,color=darkblue]
-\setupfootertexts[][\userpagenumber/\lastuserpage]
+\setupfootertexts[\setups{footer:metadata}][\userpagenumber/\lastuserpage]
+
+\startsetups footer:metadata
+  \getvariable{metadata}{title} (\getvariable{metadata}{author})
+\stopsetups
 
 \definehead
     [slide]
