Example text for images
The simpleslides module provides two ways of including images: a horizontal
mode and a vertical mode. I like that, and want to provide similar alternatives
in this case.

A horizontal image should occupy as must horizontal space as possible without
overflowing the page height.

A vertical image should not be wider than 0.5\textwidth and should occupy as
much vertical space as possible.

For now, we use dummy settings `horizontal` and `vertical` for these two types
of images. The actual settings will be defined in the the next commits.

--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,8 @@
 \environment slides
 
+% To enable the use of sample images in ConTeXt distrubtion
+\setupexternalfigures[location={local,global,default}]
+
 \starttext
 
 \setvariables
@@ -45,5 +48,34 @@
   and a long line following the display math. 
 
 \stopslide
+
+\startslide[title={Horizontal Image}]
+  \startplacefigure
+    \externalfigure[hacker][horizontal]
+  \stopplacefigure
+\stopslide
+
+\startslide[title={Horizontal Image with text}]
+  \input ward
+
+  \startplacefigure
+    \externalfigure[hacker][horizontal]
+  \stopplacefigure
+\stopslide
+
+\startslide[title={Vertical Image}]
+  \startplacefigure
+    \externalfigure[mill][vertical]
+  \stopplacefigure
+\stopslide
+
+\startslide[title={Vertical Image with text}]
+  \startplacefigure[location=left]
+    \externalfigure[hacker][vertical][width=0.5\textwidth]
+  \stopplacefigure
+  \input ward
+
+\stopslide
+
 
 \stoptext
