Remove figure numbers
I don't prefer the figures in presentations to be numbered so I remove them.

--- a/slides.tex
+++ b/slides.tex
@@ -117,4 +117,9 @@
 \setupformula
     [spacebefore={nowhite,quarterline}, spaceafter={back,nowhite,quarterline}]
 
+\setupcaptions
+    [
+      number=no,
+    ]
+
 \stopenvironment
