Define settings for horizontal images
Read:

- http://wiki.contextgarden.net/Command/defineexternalfigure

for details on defining settings for figures.

To determine the amount of vertical space left on the page, we define a measure
`page`. The exact value of this measure is taken from a solution by Wolfgang
Schuster on the ConTeXt mailing list.

--- a/slides.tex
+++ b/slides.tex
@@ -122,4 +122,14 @@
       number=no,
     ]
 
+\definemeasure[page][\dimexpr\pagegoal-\pagetotal-\lineheight\relax]
+
+\defineexternalfigure
+    [horizontal]
+    [
+      width=\textwidth,
+      height=\measure{page},
+      factor=max,
+    ]
+
 \stopenvironment
