Add setting for vertical images
The idea for the settings for vertical images is the same as that of horizontal
images. We add a little bit more vertical space around vertical images.

--- a/example.tex
+++ b/example.tex
@@ -71,7 +71,7 @@
 
 \startslide[title={Vertical Image with text}]
   \startplacefigure[location=left]
-    \externalfigure[hacker][vertical][width=0.5\textwidth]
+    \externalfigure[mill][vertical]
   \stopplacefigure
   \input ward
 
