Tweak space around figures
By default, ConTeXt includes a big space before and after a float. I find that
to be excessive; so I reduced the space.

See:

- http://wiki.contextgarden.net/Command/setupfloat

for details.

--- a/slides.tex
+++ b/slides.tex
@@ -123,6 +123,12 @@
       number=no,
     ]
 
+\setupfloats
+    [
+      spacebefore=nowhite,
+      spaceafter=small,
+    ]
+
 \definemeasure[page][\dimexpr\pagegoal-\pagetotal-\lineheight\relax]
 \definemeasure[shortpage][\dimexpr\pagegoal-\pagetotal-\lineheight-2\bigskipamount\relax]
 
