Prelim to defining a fancy background
I want to add some subtle affects to the background. For that, I will use
MetaPost. As a first step, I redraw the colored background using MetaPost. See
the MetaFun manual for details.

--- a/slides.tex
+++ b/slides.tex
@@ -37,7 +37,15 @@
     ]
 
 
-\setupbackgrounds[page][background=color, backgroundcolor=lightgray]
+\startreusableMPgraphic {page:background}
+  StartPage;
+    fill Page withcolor \MPcolor{lightgray};
+  StopPage;
+\stopreusableMPgraphic
+
+\defineoverlay [page:background][\reuseMPgraphic{page:background}]
+
+\setupbackgrounds[page][background={page:background}]
 
 \setupfooter[style=small,color=darkblue]
 \setupfootertexts[\setups{footer:metadata}][\userpagenumber/\lastuserpage]
