Create a subtle red border around each slide
I like this subtle background, but this example shows that you are free to pick
any MetaPost graphic that you like as a background.

--- a/slides.tex
+++ b/slides.tex
@@ -39,7 +39,10 @@
 
 \startreusableMPgraphic {page:background}
   StartPage;
-    fill Page withcolor \MPcolor{lightgray};
+    save p; path p;
+    p := Page superellipsed 0.98;
+    fill Page withcolor \MPcolor{darkred};
+    fill p withcolor \MPcolor{lightgray};
   StopPage;
 \stopreusableMPgraphic
 
