Use preferred font setup
Latin Modern, the default ConTeXt font, does not look good in presentations.
ConTeXt makes it easy to change the font setup. I use:

- Fontin as main font
- Delicious as Sans font (for headings etc)
- Dejavu Sans Mono as Monoface font
- Neo Euler as math font

Dejavu Sana Mono is much taller than Fontin, so I scale it down to 85%
so that the two fonts have similar height.

--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,12 @@
 \startenvironment *
 
+\definefontfamily [mainface] [rm] [Fontin]
+\definefontfamily [mainface] [ss] [Delicious]
+\definefontfamily [mainface] [tt] [Dejavu Sans Mono] [scale=0.85]
+\definefontfamily [mainface] [mm] [Neo Euler]
+
+\setupbodyfont[mainface, 12pt]
+
 \setuppapersize [S4]
 
 \setuplayout
