Enable composed characters
Fontin does not have all accented characters (e.g, ü or ç). When `compose=yes`
is added to default font features, ConTeXt uses fallback _composed_ characters
for these missing characters.

A discussion on composed characters is out of the scope of this example. Just
think of this as a workaround for an incomplete font.

--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,10 @@
 \startenvironment *
 
+\definefontfeature
+  [default]
+  [default]
+  [compose=yes]
+
 \definefontfamily [mainface] [rm] [Fontin]
 \definefontfamily [mainface] [ss] [Delicious]
 \definefontfamily [mainface] [tt] [Dejavu Sans Mono] [scale=0.85]
