--- a/slides.tex
+++ b/slides.tex
@@ -7,7 +7,7 @@
 
 \definefontfamily [mainface] [rm] [Fontin]
 \definefontfamily [mainface] [ss] [Delicious]
-\definefontfamily [mainface] [tt] [Dejavu Sans Mono] [scale=0.85]
+\definefontfamily [mainface] [tt] [Dejavu Sans Mono] [scale=0.85, features=none]
 \definefontfamily [mainface] [mm] [Neo Euler]
 
 \setupbodyfont[mainface, 12pt]
