Enable hanging punctuation
I think that hanging punctuation is useful for presentation. See

- http://wiki.contextgarden.net/Protrusion

for details.

--- a/slides.tex
+++ b/slides.tex
@@ -3,7 +3,7 @@
 \definefontfeature
   [default]
   [default]
-  [compose=yes]
+  [compose=yes, expansion=quality, protrusion=quality]
 
 \definefontfamily [mainface] [rm] [Fontin]
 \definefontfamily [mainface] [ss] [Delicious]
@@ -11,6 +11,8 @@
 \definefontfamily [mainface] [mm] [Neo Euler]
 
 \setupbodyfont[mainface, 12pt]
+
+\setupalign[hanging]
 
 \setuppapersize [S4]
 
