Add `slide` structure
The basic structural element of a presentation is a slide. Amongst the various
ways to create a slide environment, I define slides as a _section heading_ and
make it borrow all the default elements from `subject` heading.

--- a/example.tex
+++ b/example.tex
@@ -2,10 +2,10 @@
 
 \starttext
 
-A basic example with some filler \mono{text}
+\startslide[title={Sample Slide}]
 
-\type{--enable}
+  \input knuth
 
-\input knuth
+\stopslide
 
 \stoptext
